refator: 채팅 메세지 읽음 웹소켓 방식으로 리팩토링